add new levels screens and fonts

--- a/scrum-ios/scrum-ios/Base.lproj/Main.storyboard
+++ b/scrum-ios/scrum-ios/Base.lproj/Main.storyboard
@@ -21,10 +21,18 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uk3-xY-2oL">
-                                <rect key="frame" x="155" y="295" width="75" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="R81-Sf-mg1">
+                                <rect key="frame" x="145" y="390" width="94" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="PRESS"/>
+                                <state key="normal" title="BIG LEVELS"/>
+                                <connections>
+                                    <action selector="bigLevelsPressed:" destination="h8A-mq-cMs" eventType="touchUpInside" id="IGH-7O-Hys"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uk3-xY-2oL">
+                                <rect key="frame" x="155" y="294" width="75" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="LOGIN"/>
                                 <connections>
                                     <action selector="buttonPressed:" destination="h8A-mq-cMs" eventType="touchUpInside" id="ei9-ho-ksD"/>
                                 </connections>
