--- a/scrum-ios/scrum-ios/Levels.storyboard
+++ b/scrum-ios/scrum-ios/Levels.storyboard
@@ -9,10 +9,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Levels View Controller-->
         <scene sceneID="tit-yR-3gk">
             <objects>
-                <viewController id="Thj-ma-1Cm" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="LevelsViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Thj-ma-1Cm" customClass="LevelsViewController" customModule="scrum_ios" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="BOL-Gt-OlC"/>
                         <viewControllerLayoutGuide type="bottom" id="1xF-QA-dbh"/>
@@ -22,25 +22,28 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="lj2-TO-bVP">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="5Ak-J2-8Ct">
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="5" minimumInteritemSpacing="0.0" id="5Ak-J2-8Ct">
                                     <size key="itemSize" width="371" height="144"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="nJ0-ac-3Kq">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="BigLevel" id="SL5-dc-4jV" customClass="BigLevelCollectionViewCell" customModule="scrum_ios" customModuleProvider="target">
                                         <rect key="frame" x="2" y="0.0" width="371" height="144"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <autoresizingMask key="autoresizingMask"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                             <rect key="frame" x="0.0" y="0.0" width="371" height="144"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </view>
-                                        <color key="backgroundColor" red="1" green="0.68759718993049179" blue="0.61986711240334846" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     </collectionViewCell>
                                 </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="Thj-ma-1Cm" id="hiR-nW-yhW"/>
+                                    <outlet property="delegate" destination="Thj-ma-1Cm" id="mZa-GQ-Bmw"/>
+                                </connections>
                             </collectionView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -48,9 +51,12 @@
                             <constraint firstItem="lj2-TO-bVP" firstAttribute="leading" secondItem="EF5-ar-pIY" secondAttribute="leading" id="32z-MP-zXF"/>
                             <constraint firstItem="1xF-QA-dbh" firstAttribute="top" secondItem="lj2-TO-bVP" secondAttribute="bottom" id="FLm-fA-L8x"/>
                             <constraint firstAttribute="trailing" secondItem="lj2-TO-bVP" secondAttribute="trailing" id="Mlh-sE-4Jo"/>
-                            <constraint firstItem="lj2-TO-bVP" firstAttribute="top" secondItem="BOL-Gt-OlC" secondAttribute="bottom" id="nBt-oJ-Sdd"/>
+                            <constraint firstItem="lj2-TO-bVP" firstAttribute="top" secondItem="EF5-ar-pIY" secondAttribute="top" id="msS-hl-91Z"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="collectionView" destination="lj2-TO-bVP" id="4hQ-gu-g1h"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="P5s-ga-RA7" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
